# Numerical-Methods-Lab

./: .gitignore  CMakeLists.txt  README.md  ШАБЛОН ОТЧЁТА.tex
dependencies/: CMakeLists.txt
dependencies/implot/: CMakeLists.txt
dependencies/implot/include/implot/: implot.h
dependencies/implot/src/: implot.cpp  implot_demo.cpp  implot_items.cpp
dependencies/random/: .travis.yml
labs/: CMakeLists.txt
labs/lab_1/: CMakeLists.txt  main.cpp
labs/lab_1/Report/: report_lab_1.tex
labs/lab_2/: CMakeLists.txt  main.cpp
labs/lab_2/Report/: report_lab_2.tex
labs/lab_3/: CMakeLists.txt  main.cpp
labs/lab_3/Report/: report_lab_3.tex
labs/lab_4/: CMakeLists.txt  main.cpp
labs/lab_4/Report/: report_lab_4.tex
labs/lab_5/: CMakeLists.txt  main.cpp
labs/lab_5/Report/: report_lab_5.tex
murlib/: CMakeLists.txt
murlib/include/murlib/: approximation.h  integration.h  interpolation.h  matrix_solver.h  miscellaneous.h  nonlinear_eq.h
murlib/src/: approximation.cpp  integration.cpp  interpolation.cpp  matrix_solver.cpp  miscellaneous.cpp  murlib.cpp
tests/: CMakeLists.txt  tests.cpp
